<resources>
    <string name="app_name">FT Tracker</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="versus">Versus</string>
    <string name="team_2">Team 2</string>
    <string name="team_1">Team 1</string>
    <string name="match_status">Match Status</string>
    <string name="search">Search</string>
</resources>